--- a/test/relationships.yml
+++ b/test/relationships.yml
@@ -10,21 +10,6 @@ MetroArea(unnamedFull):
 MetroArea(unnamedFullNoAgencyName):
         name:
 
-NtdAgency(bart):
-        metroArea: sf
-        name: BART
-        website: http://www.bart.gov
-        ntdId: 9003
-        population: 5900000
-        ridership:
-        passengerMiles:
-
-NtdAgency(kcm):
-        metroArea: unnamedFull
-        name: King County Metro
-        website: http://metro.kingcounty.gov
-        ntdId: 0001
-
 NtdAgency(myAgency):
         metroArea: unnamedFullNoAgencyName
         website: http://example.com
@@ -35,12 +20,26 @@ GtfsFeed(bart_gtfs):
         agencyWebsite: http://www.bart.gov
 
 GtfsFeed(kcm):
-        agencies: kcm
         official: true
         agencyWebsite: http://metro.kingcounty.gov
 
 GtfsFeed(westCoast):
-        agencies: [kcm, bart]
         official: false
         agencyWebsite: http://example.com
         
+NtdAgency(bart):
+        metroArea: sf
+        name: BART
+        website: http://www.bart.gov
+        ntdId: 9003
+        population: 5900000
+        ridership:
+        passengerMiles:
+        feeds: [bart_gtfs, westCoast]
+
+NtdAgency(kcm):
+        metroArea: unnamedFull
+        name: King County Metro
+        website: http://metro.kingcounty.gov
+        ntdId: 0001
+        feeds: [kcm, westCoast]
