--- a/test/relationships.yml
+++ b/test/relationships.yml
@@ -12,25 +12,25 @@ MetroArea(unnamedFullNoAgencyName):
 
 NtdAgency(myAgency):
         metroArea: unnamedFullNoAgencyName
-        website: http://example.com
+        url: http://example.com
 
 GtfsFeed(bart_gtfs):
         agencies: bart
         official: true
-        agencyWebsite: http://www.bart.gov
+        agencyUrl: http://www.bart.gov
 
 GtfsFeed(kcm):
         official: true
-        agencyWebsite: http://metro.kingcounty.gov
+        agencyUrl: http://metro.kingcounty.gov
 
 GtfsFeed(westCoast):
         official: false
-        agencyWebsite: http://example.com
+        agencyUrl: http://example.com
         
 NtdAgency(bart):
         metroArea: sf
         name: BART
-        website: http://www.bart.gov
+        url: http://www.bart.gov
         ntdId: 9003
         population: 5900000
         ridership:
@@ -40,6 +40,6 @@ NtdAgency(bart):
 NtdAgency(kcm):
         metroArea: unnamedFull
         name: King County Metro
-        website: http://metro.kingcounty.gov
+        url: http://metro.kingcounty.gov
         ntdId: 0001
         feeds: [kcm, westCoast]
