--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,12 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=fs
+db=postgres://dashboard:gtfsdata@localhost/dashboard
+# http://stackoverflow.com/questions/2737420 describes this variable, and it seems to work in
+# a config file
+# since we're using PostGIS, we want to avoid storing anything in public
+# http://blog.cleverelephant.ca/2010/09/postgis-back-up-restore.html
+hibernate.default_schema=dashboard
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
