PostGIS in unit tests.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,7 +69,7 @@ date.format=yyyy-MM-dd
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-# application.log=INFO
+application.log=DEBUG
 #
 # More logging configuration
 # application.log.path=/log4j.properties
@@ -82,12 +82,13 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=postgres://dashboard:gtfsdata@localhost/dashboard
+#db=postgres://dashboard:gtfsdata@localhost/dashboard
 # http://stackoverflow.com/questions/2737420 describes this variable, and it seems to work in
 # a config file
 # since we're using PostGIS, we want to avoid storing anything in public
 # http://blog.cleverelephant.ca/2010/09/postgis-back-up-restore.html
-hibernate.default_schema=dashboard
+
+#hibernate.default_schema=dashboard
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
@@ -96,10 +97,10 @@ hibernate.default_schema=dashboard
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
-# db.url=jdbc:postgresql:database_name
-# db.driver=org.postgresql.Driver
-# db.user=root
-# db.pass=secret
+db.url=jdbc:postgresql:dashboard
+db.driver=org.postgresql.Driver
+db.user=dashboard
+db.pass=gtfsdata
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
@@ -220,7 +221,9 @@ mail.smtp=mock
 # ~~~~~
 #%test.module.cobertura=${play.path}/modules/cobertura
 %test.application.mode=dev
-%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+%test.db=postgresql://dashboard:gtfsdata@localhost/dashboard
+# put the test data in its own schema so it doesn't stomp production/dev data
+%test.hibernate.default_schema=test_dashboard
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
