--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,7 +130,7 @@ jpa.dialect=org.hibernatespatial.postgis.PostgisDialect
 # jpa.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
-# jpa.debugSQL=true
+jpa.debugSQL=true
 #
 # You can even specify additional hibernate properties here:
 # hibernate.use_sql_comments=true
