Fix #7 using votecounter app.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ date.format=yyyy-MM-dd
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-# http.port=9000
+http.port=9001
 #
 # By default the server listen for HTTP on the wilcard address.
 # You can restrict this.
@@ -88,7 +88,7 @@ application.log=DEBUG
 # since we're using PostGIS, we want to avoid storing anything in public
 # http://blog.cleverelephant.ca/2010/09/postgis-back-up-restore.html
 
-#hibernate.default_schema=dashboard
+hibernate.default_schema=dashboard
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
