--- a/test/planner.yml
+++ b/test/planner.yml
@@ -1,23 +1,23 @@
 GtfsFeed(bart3):
-        startDate: 2012-12-10
-        expirationDate: 2013-4-10
+        startDate: 2012-12-10Z
+        expirationDate: 2013-4-10Z
         storedId: bart3
 
 GtfsFeed(bart2):
-        startDate: 2012-07-16
-        expirationDate: 2012-12-31
+        startDate: 2012-07-16Z
+        expirationDate: 2012-12-31Z
         storedId: bart2
         supersededBy: bart3
 
 GtfsFeed(bart1):
-        startDate: 2012-01-01
-        expirationDate: 2012-09-15
+        startDate: 2012-01-01Z
+        expirationDate: 2012-09-15Z
         storedId: bart1
         supersededBy: bart2
         
 GtfsFeed(muni):
-        startDate: 2012-05-16
-        expirationDate: 2012-10-10
+        startDate: 2012-05-16Z
+        expirationDate: 2012-10-10Z
         storedId: muni
         
 NtdAgency(bart):
@@ -33,18 +33,18 @@ MetroArea(sf):
         agencies: [muni, bart]
 
 GtfsFeed(sbmtd):
-        startDate: 2012-11-01
-        expirationDate: 2014-10-10
+        startDate: 2012-11-01Z
+        expirationDate: 2014-10-10Z
         storedId: sbmtd
 
 GtfsFeed(slorta):
-        startDate: 2012-10-09
-        expirationDate: 2014-10-10
+        startDate: 2012-10-09Z
+        expirationDate: 2014-10-10Z
         storedId: slorta
 
 GtfsFeed(sbcounty):
-        startDate: 2011-10-10
-        expirationDate: 2015-10-10
+        startDate: 2011-10-10Z
+        expirationDate: 2015-10-10Z
         storedId: sbcounty
         supersededBy: sbmtd
 
@@ -61,13 +61,13 @@ MetroArea(sb):
         agencies: [slorta, sbmtd]
 
 GtfsFeed(lacombined2):
-        startDate: 2012-09-05
-        expirationDate: 2014-01-01
+        startDate: 2012-09-05Z
+        expirationDate: 2014-01-01Z
         storedId: lacombined2
 
 GtfsFeed(lacombined1):
-        startDate: 2011-09-05
-        expirationDate: 2014-01-01
+        startDate: 2011-09-05Z
+        expirationDate: 2014-01-01Z
         storedId: lacombined1
         supersededBy: lacombined2
 
