--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -6,3 +6,5 @@ require:
     - net.sf.opencsv -> opencsv 2.3
     - com.amazonaws -> aws-java-sdk 1.3.17
     - org.onebusaway -> onebusaway-gtfs 1.3.0
+    - play.module -> lombok 1.2.3
+    - org.projectlombok -> lombok 0.11.4
