--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,7 +63,9 @@ http.port=9000
 # jpda.port=8000
 #
 # Java source level => 1.5, 1.6 or 1.7 (experimental)
-# java.source=1.5
+# idea from http://stackoverflow.com/questions/9904885
+# don't break CRUD compiled against java6 when using java7
+java.source=1.6
 
 # Log level
 # ~~~~~
@@ -228,5 +230,11 @@ mail.smtp=mock
 %test.mail.smtp=mock
 
 # Window in days for deployer requests
-dashboard.planwindow=28 
+dashboard.planwindow=90
+
+# Should deployer requests be sent automatically
+dashboard.send_requests_automatically=true
+
+# Where should deployer requests be sent?
+dashboard.send_deployer_requests_to=http://localhost:8000/
 
